--- a/ProductAPI/ProductApi.API/ProductApi.API.csproj
+++ b/ProductAPI/ProductApi.API/ProductApi.API.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.2" />
     <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
@@ -14,6 +16,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ProductApi.Data\ProductApi.Data.csproj" />
+    <ProjectReference Include="..\ProductApi.Services\ProductApi.Services.csproj" />
     <ProjectReference Include="..\ProductApi.Shared\ProductApi.Shared.csproj" />
   </ItemGroup>
 
