--- a/ProductAPI/ProductApi.Data/ProductApi.Data.csproj
+++ b/ProductAPI/ProductApi.Data/ProductApi.Data.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ProductApi.Models\ProductApi.Models.csproj" />
+  </ItemGroup>
+
 </Project>
