--- a/ProductAPI/ProductApi.Services/ProductApi.Services.csproj
+++ b/ProductAPI/ProductApi.Services/ProductApi.Services.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ProductApi.Data\ProductApi.Data.csproj" />
+    <ProjectReference Include="..\ProductApi.Models\ProductApi.Models.csproj" />
+  </ItemGroup>
+
 </Project>
