--- a/ProductAPI/ProductApi.API/appsettings.Development.json
+++ b/ProductAPI/ProductApi.API/appsettings.Development.json
@@ -1,8 +1,13 @@
 {
+  //Update the Server name
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=dev-server;Database=Products;Integrated Security=True;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Debug",
+      "Microsoft": "Information",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   }
 }
