--- a/ProductAPI/ProductApi.API/appsettings.Staging.json
+++ b/ProductAPI/ProductApi.API/appsettings.Staging.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": ""
+    "DefaultConnection": "Server=staging_server;Database=staging_database;User Id=staging_user;Password=staging_password;"
   },
   "Logging": {
     "LogLevel": {
@@ -8,6 +8,5 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
