--- a/ProductAPI/ProductApi.API/ProductApi.API.csproj
+++ b/ProductAPI/ProductApi.API/ProductApi.API.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -7,7 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="14.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.2" />
     <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
@@ -16,7 +21,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ProductApi.Controller\ProductApi.Controller.csproj" />
     <ProjectReference Include="..\ProductApi.Data\ProductApi.Data.csproj" />
+    <ProjectReference Include="..\ProductApi.Mappers\ProductApi.Mappers.csproj" />
     <ProjectReference Include="..\ProductApi.Services\ProductApi.Services.csproj" />
     <ProjectReference Include="..\ProductApi.Shared\ProductApi.Shared.csproj" />
   </ItemGroup>
