--- a/ProductAPI/ProductApi.Mappers/ProductApi.Mappers.csproj
+++ b/ProductAPI/ProductApi.Mappers/ProductApi.Mappers.csproj
@@ -7,12 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.3.0" />
-    <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="7.2.0" />
+    <PackageReference Include="AutoMapper" Version="14.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ProductApi.Services\ProductApi.Services.csproj" />
+    <ProjectReference Include="..\ProductApi.Models\ProductApi.Models.csproj" />
   </ItemGroup>
 
 </Project>
