--- a/ProductAPI/ProductApi.Services/ProductApi.Services.csproj
+++ b/ProductAPI/ProductApi.Services/ProductApi.Services.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="14.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ProductApi.Data\ProductApi.Data.csproj" />
     <ProjectReference Include="..\ProductApi.Models\ProductApi.Models.csproj" />
   </ItemGroup>
