--- a/ProductAPI/ProductApi.Shared/ProductApi.Shared.csproj
+++ b/ProductAPI/ProductApi.Shared/ProductApi.Shared.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Utils\" />
+  </ItemGroup>
+
 </Project>
