--- a/ProductAPI/ProductApi.Tests/ProductApi.Tests.csproj
+++ b/ProductAPI/ProductApi.Tests/ProductApi.Tests.csproj
@@ -11,9 +11,18 @@
 
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
+    <PackageReference Include="FluentAssertions" Version="8.1.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
+    <PackageReference Include="Moq" Version="4.20.72" />
     <PackageReference Include="xunit" Version="2.5.3" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ProductApi.Controller\ProductApi.Controller.csproj" />
+    <ProjectReference Include="..\ProductApi.Data\ProductApi.Data.csproj" />
+    <ProjectReference Include="..\ProductApi.Services\ProductApi.Services.csproj" />
   </ItemGroup>
 
   <ItemGroup>
